<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="view_trip">View Trip</string>
    <string name="create_trip">Create Trip</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="friends">Friends</string>
    <string name="cancel">Cancel Trip</string>
    <string name="error_msg">No trip is found</string>
    <string name="hi_msg">Hi, start your trip</string>
    <string name="create_trip_msg">Please create your trip</string>
    <string name="view_your_trip">View your trip</string>

</resources>
